--- a/css/main.css
+++ b/css/main.css
@@ -11,38 +11,64 @@ body {
 
 /* regole header */
 .contenitore-header{
-    background-color: #ADD8E7;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     height: 60px;
     border-style: dashed;
+    /* DEBUG */
+    background-color: #ADD8E7;
 }
 
-/* DEBUG */
+/* intestazioni */
 .logo{
-    background-color: #DAA51D;
     border-style: dashed;
+    width: 15%;
     padding: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
+        /* DEBUG */
+    background-color: #DAA51D;
 }
 
 .link{
-    background-color: #DAA51D;
     border-style: dashed;
     display: flex;
+    width: 40%;
     padding: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
-
+    /* DEBUG */
+    background-color: #DAA51D;
 }
 
 .login{
-    background-color: #DAA51D;
     border-style: dashed;
+    width: 15%;
     padding: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
+        /* DEBUG */
+    background-color: #DAA51D;
+}
+
+/* sotto intestazione */
+.sotto-intestazione{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    border-style: dashed;
+    /* DEBUG */
+    background-color: #00018B;
+}
+
+.conainer-sotto-intestazione{
+    border-style: dashed;
+    width: 60%;
+    height: 80%;
+        /* DEBUG */
+    background-color: #EF82ED;
 }
