--- a/css/main.css
+++ b/css/main.css
@@ -16,24 +16,22 @@ body {
     justify-content: center;
     align-items: center;
     height: 60px;
-    border-style: dashed;
     /* DEBUG */
     background-color: #ADD8E7;
 }
 
 /* intestazioni */
 .logo{
-    border-style: dashed;
-    width: 15%;
+    width: 20%;
     padding: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
         /* DEBUG */
     background-color: #DAA51D;
+    border-style: dashed;
 }
 
 .link{
-    border-style: dashed;
     display: flex;
     width: 40%;
     padding: 10px;
@@ -41,26 +39,25 @@ body {
     margin-bottom: 10px;
     /* DEBUG */
     background-color: #DAA51D;
+    border-style: dashed;
 }
 
 .login{
-    border-style: dashed;
-    width: 15%;
+    width: 20%;
     padding: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
         /* DEBUG */
     background-color: #DAA51D;
+    border-style: dashed;
 }
 
 /* sotto intestazione */
 .sotto-intestazione{
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
     height: 400px;
-    border-style: dashed;
     /* DEBUG */
     background-color: #00018B;
 }
@@ -71,4 +68,130 @@ body {
     height: 80%;
         /* DEBUG */
     background-color: #EF82ED;
+}
+
+/* prima sezione main */
+.sezione-un-luogo{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    /* DEBUG */
+    background-color: #fff;
+}
+
+.container-block1{
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    height: 80%;
+        /* DEBUG */
+    background-color: #fff;
+}
+
+.container-text1{
+    height: 100%;
+    width: 35%;
+    /* DEBUG */
+    background-color: #FEC0CA;
+    border-style: dashed;
+}
+
+.container-img1{
+    height: 100%;
+    width: 65%;
+    /* DEBUG */
+    background-color: #1E90FF;
+    border-style: dashed;
+}
+
+/* seconda sezione */
+.sezione-dove-trovarsi{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    /* DEBUG */
+    background-color: #D3D3D3;
+}
+
+.container-block2{
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    height: 80%;
+        /* DEBUG */
+    background-color: #fff;
+}
+
+.container-text2{
+    height: 100%;
+    width: 65%;
+    /* DEBUG */
+    background-color: #1E90FF;
+    border-style: dashed;
+}
+
+.container-img2{
+    height: 100%;
+    width: 35%;
+    /* DEBUG */
+    background-color: #FEC0CA;
+    border-style: dashed;
+}
+
+/* terza sezione */
+.sezione-da-pochi{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    /* DEBUG */
+    background-color: #fff;
+}
+
+.container-block3{
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    height: 80%;
+        /* DEBUG */
+    background-color: #fff;
+}
+
+.container-text3{
+    height: 100%;
+    width: 35%;
+    /* DEBUG */
+    background-color: #FEC0CA;
+    border-style: dashed;
+}
+
+.container-img3{
+    height: 100%;
+    width: 65%;
+    /* DEBUG */
+    background-color: #1E90FF;
+    border-style: dashed;
+}
+
+/* quarta sezione */
+.finale-blocco-principale{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 800px;
+    /* DEBUG */
+    background-color: #D3D3D3;
+}
+
+.conainer-finale-blocco-principale{
+    width: 80%;
+    height: 80%;
+        /* DEBUG */
+    background-color: #218B21;
+    border-style: dashed;
 }
