--- a/css/main.css
+++ b/css/main.css
@@ -10,22 +10,34 @@ body {
 }
 
 /* regole header */
+.sezione-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    /* DEBUG */
+    background-color: #ADD8E7;
+}
+
 .contenitore-header{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 60px;
+    width: 80%;
+    height: 70%;
     /* DEBUG */
-    background-color: #ADD8E7;
 }
 
 /* intestazioni */
 .logo{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 10px;
     width: 20%;
-    padding: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    height: 100%;
         /* DEBUG */
     background-color: #DAA51D;
     border-style: dashed;
@@ -33,20 +45,22 @@ body {
 
 .link{
     display: flex;
-    width: 40%;
-    padding: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    height: 100%;
     /* DEBUG */
     background-color: #DAA51D;
     border-style: dashed;
 }
 
 .login{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding-right: 10px;
     width: 20%;
-    padding: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    height: 100%;
         /* DEBUG */
     background-color: #DAA51D;
     border-style: dashed;
@@ -128,17 +142,17 @@ body {
 
 .container-text2{
     height: 100%;
-    width: 65%;
+    width: 35%;
     /* DEBUG */
-    background-color: #1E90FF;
+    background-color: #FEC0CA;
     border-style: dashed;
 }
 
 .container-img2{
     height: 100%;
-    width: 35%;
+    width: 65%;
     /* DEBUG */
-    background-color: #FEC0CA;
+    background-color: #1E90FF;
     border-style: dashed;
 }
 
