--- a/css/main.css
+++ b/css/main.css
@@ -216,3 +216,48 @@ body {
     border-style: dashed;
     border-color: #fff;
 }
+
+/* sezione footer */
+.sezione-footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    /* DEBUG */
+    background-color: #23272A;
+}
+
+.contenitore-footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    height: 70%;
+    /* DEBUG */
+    background-color: #7EFCD4;
+}
+
+/* contenuto footer */
+.logo-footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 5%;
+    height: 65%;
+        /* DEBUG */
+    background-color: #FDB6C2;
+    border-style: dashed;
+}
+
+.bottone{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 6%;
+    height: 65%;
+    /* DEBUG */
+    background-color: #FDB6C2;
+    border-style: dashed;
+}
